--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ body, html {
 
 .bg {
   /* The image used */
-  background-image: url("IMG_8782.jpeg");
+  background-image: url("Untitled.png");
 
   /* Full height */
   height: 100%; 
