--- a/index.html
+++ b/index.html
@@ -8,14 +8,11 @@
 
 <div class="constelacao"></div>
 
-<div class="lua">
-  <div class="textura"></div>
-</div>
 
 <div class="chuvaMeteoro"></div>
 
 <div class="floresta">
-  <img src="https://raw.githubusercontent.com/interaminense/starry-sky/master/src/img/bgTree.png" alt="" />
+  <img src="Untitled1.png" alt="" />
 </div>
 <style>
   * {
@@ -134,20 +131,6 @@ html, body {
   animation-timing-function: linear;
   animation-iteration-count: infinite;
   animation-duration: 10s;
-}
-
-.lua .textura {
-  background-image: url(https://raw.githubusercontent.com/interaminense/starry-sky/master/src/img/bgMoon.png);
-  background-position: center;
-  background-size: 100%;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  border-radius: 50%;
-  overflow: hidden;
-  opacity: 0.4;
 }
 
 .floresta {
