--- a/index.html
+++ b/index.html
@@ -141,10 +141,11 @@ html, body {
 }
 
 .floresta img {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
+  position: fixed;
+    left: 50%;
+    bottom: 0;
+    width: 800px;
+    margin-left: -400px;
 }
 
 @keyframes escurecer {
