--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <div class="floresta">
   <img src="Untitled1.png" alt="" />
 </div>
+
+  <div id="text">Book your next adventure now</div>
+
+  
 <style>
   * {
   box-sizing: content-box;
@@ -232,6 +236,17 @@ html, body {
     -webkit-transform: rotate(360deg);
   }
 }
+
+#text{
+    position: fixed;
+    color: #fff;
+    font-size: 40px;
+    text-transform: uppercase;
+    top: 30%;
+    text-align: center;
+    width: 100%;
+}
+  
 </style>
   <script>function init(){
 
