--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <img src="Untitled1.png" alt="" />
 </div>
 
-  <div id="text">Book your next adventure now</div>
+  <div id="text"><a target="_blank" href="https://ca.outdoorsy.com/rv-rental/edmonton_ab_ca/2023_toyota_rav4_398325-listing">Book your next adventure now</a></div>
 
   
 <style>
