--- a/index.html
+++ b/index.html
@@ -246,6 +246,11 @@ html, body {
     text-align: center;
     width: 100%;
 }
+
+  #text a {
+        text-decoration: none;
+    color: #fff;
+  }
   
 </style>
   <script>function init(){
