added webp image

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="constelacao"></div>
 <div class="chuvaMeteoro"></div>
 <div class="car">
-  <img src="img/rav4-with-tent.png" alt="" />
+  <img src="img/rav4-with-tent.webp" alt="" />
 </div>
 
   <div id="text"><a target="_blank" href="https://ca.outdoorsy.com/rv-rental/edmonton_ab_ca/2023_toyota_rav4_398325-listing">Book your next adventure now</a></div>
