--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-ca" >
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Experience luxury camping with our RAV4 roof top tent rental featuring the Thule Explorer Kukenam. Ideal for adventurous travelers seeking comfort and style in the great outdoors. Book your luxury adventure today!">
