--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
 <link rel="manifest" href="img/site.webmanifest">
-
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz@0,8..60;1,8..60&display=swap');
+  </style>
+  
 <link crossorigin="anonymous" media="all" rel="stylesheet" href="css/main.css" />
 <script crossorigin="anonymous" defer="defer" type="application/javascript" src="js/main.js"></script>
 </head>
@@ -28,6 +31,8 @@
   <img src="img/rav4-with-tent.webp" alt="" />
 </div>
 
-  <div id="text"><a target="_blank" href="https://ca.outdoorsy.com/rv-rental/edmonton_ab_ca/2023_toyota_rav4_398325-listing">Book your next adventure now</a></div>
-
+  <div id="text">
+    <a target="_blank" href="https://ca.outdoorsy.com/rv-rental/edmonton_ab_ca/2023_toyota_rav4_398325-listing">Book your next adventure now</a>
+    <div id="st">The brand new Toyota RAV4 2023 is fully equipped with a Thule Tepui Explorer Kukenam 3 person roof top tent. Explore the wilderness of Alberta & British Columbia in comfort with this stylish and fuel efficient Toyota RAV4 2023 and rooftop tent combo!</div>
+  </div>
 </body>
