--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="constelacao"></div>
 <div class="chuvaMeteoro"></div>
 <div class="car">
-  <img src="img/rav4-with-tent.webp" alt="" />
+  <img src="img/rav4-with-tent-new.webp" alt="" />
 </div>
 
   <div id="text">
