fix auto play issue ios

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <img src="img/rav4-with-tent-new.webp" alt="" />
     </div> -->
 
-    <video autoplay muted loop id="bgvd">
+    <video autoplay muted loop playsinline id="bgvd">
       <source src="img/bg.mp4" type="video/mp4">
     </video>
     <div id="dd"></div>
