--- a/index.html
+++ b/index.html
@@ -5,11 +5,51 @@
 <meta name="description" content="Experience luxury camping with our RAV4 roof top tent rental featuring the Thule Explorer Kukenam. Ideal for adventurous travelers seeking comfort and style in the great outdoors. Book your luxury adventure today!">
 <meta name="keywords" content="luxury roof top tent rental, Thule Explorer Kukenam, RAV4 roof top tent rental, high-end camping gear, luxury outdoor adventure">
 <meta name="author" content="Camp on Car">
-<meta property="og:title" content="RAV4 Roof Top Tent Rental | Explore the Outdoors">
-<meta property="og:description" content="Discover unparalleled comfort with our RAV4 roof top tent rental featuring the Thule Explorer Kukenam. Perfect for those seeking a premium outdoor experience. Book now and enjoy luxury camping!">
-<meta property="og:image" content="https://camponcar.com/img/rav4-with-thule-rooftop-tent.png">
-<meta property="og:url" content="https://camponcar.com/">
+
+<link rel="canonical" href="https://camponwheels.ca/">
+<meta property="og:site_name" content="RAV4 Roof Top Tent Rental | Explore the Outdoors">
 <meta property="og:type" content="website">
+<meta property="og:title" content="RAV4 Roof Top Tent Rental | Explore the Outdoors">
+<meta property="og:description" content="Experience luxury camping with our RAV4 roof top tent rental featuring the Thule Explorer Kukenam. Ideal for adventurous travelers seeking comfort and style in the great outdoors. Book your luxury adventure today!">
+<meta property="og:url" content="https://camponwheels.ca/">
+<meta property="og:image" content="https://camponwheels.ca/img/rav4-with-tent.webp">
+<meta property="article:publisher" content="https://www.facebook.com/camponwheelsalberta">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Luxury Rooftop Tent Adventure | RAV4 Camping">
+<meta name="twitter:description" content="Experience luxury camping with our RAV4 roof top tent rental featuring the Thule Explorer Kukenam. Ideal for adventurous travelers seeking comfort and style in the great outdoors. Book your luxury adventure today!">
+<meta name="twitter:url" content="https://camponwheels.ca/">
+<meta name="twitter:image" content="https://camponwheels.ca/img/rav4-rooftoptent-thule.jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="900">
+    
+    <script type="application/ld+json">
+{
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "publisher": {
+        "@type": "Organization",
+        "name": "RAV4 Roof Top Tent Rental",
+        "url": "https://camponwheels.ca/",
+        "logo": {
+            "@type": "ImageObject",
+            "url": "https://camponwheels.ca/img/apple-touch-icon.png",
+            "width": 60,
+            "height": 60
+        }
+    },
+    "url": "https://camponwheels.ca/",
+    "image": {
+        "@type": "ImageObject",
+        "url": "https://camponwheels.ca/img/rav4-with-tent.webp",
+        "width": 1200,
+        "height": 900
+    },
+    "mainEntityOfPage": "https://camponwheels.ca/",
+    "description": "Enjoy luxury camping with our RAV4 rooftop tent rentals in Alberta &amp; BC Rockies. Explore Banff, Jasper, Yoho, and Kootenay National Parks in style!"
+}
+    </script>
+
+
 <link rel="canonical" href="https://camponcar.com/">
 <title>RAV4 Roof Top Tent Rental | Explore the Outdoors</title>
 <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
