--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </style>
   
 <link crossorigin="anonymous" media="all" rel="stylesheet" href="css/main.css" />
-<script crossorigin="anonymous" defer="defer" type="application/javascript" src="js/main.js"></script>
+<!-- <script crossorigin="anonymous" defer="defer" type="application/javascript" src="js/main.js"></script> -->
 </head>
 <body>
   <div style="position: relative; width: 100%;  height: 100vh;  overflow: hidden;">
