--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-ca" >
 <head>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Experience luxury camping with our RAV4 roof top tent rental featuring the Thule Explorer Kukenam. Ideal for adventurous travelers seeking comfort and style in the great outdoors.">
 <meta name="keywords" content="luxury roof top tent rental, Thule Explorer Kukenam, RAV4 roof top tent rental, high-end camping gear, luxury outdoor adventure">
@@ -85,11 +86,21 @@
       <source src="img/bg.mp4" type="video/mp4">
     </video>
     <div id="dd"></div>
-
+    <div id="menu">
+      <ul>
+        <li><a href="https://blog.camponwheels.ca" target="_blank">blog</a></li>
+        <li><a href="#">galary</a></li>
+        <li><a href="https://blog.camponwheels.ca/tag/trip-suggestions/" target="_blank">trip suggestions</a></li>
+        <li><a href="https://www.rvezy.com/rv-rental/alberta_edmonton_motorhome_truckcamper_toyota_rav4_beb694" target="_blank">book now</a></li>
+      </ul>
+    </div>
     <div id="text">
       <!-- <a target="_blank" href="https://ca.outdoorsy.com/rv-rental/edmonton_ab_ca/2023_toyota_rav4_398325-listing"><h1>Book your next adventure now</h1> <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path stroke="currentColor" fill="currentColor" d="m5 2h2c.55228475 0 1 .44771525 1 1 0 .51283584-.38604019.93550716-.88337887.99327227l-.11662113.00672773h-2c-.51283584 0-.93550716.38604019-.99327227.88337887l-.00672773.11662113v14c0 .5128358.38604019.9355072.88337887.9932723l.11662113.0067277h14c.5128358 0 .9355072-.3860402.9932723-.8833789l.0067277-.1166211v-2c0-.5522847.4477153-1 1-1 .5128358 0 .9355072.3860402.9932723.8833789l.0067277.1166211v2c0 1.5976809-1.24892 2.9036609-2.8237272 2.9949073l-.1762728.0050927h-14c-1.59768088 0-2.90366088-1.24892-2.99490731-2.8237272l-.00509269-.1762728v-14c0-1.59768088 1.24891996-2.90366088 2.82372721-2.99490731l.17627279-.00509269h2zm16 0 .081.003.1197258.01724007.1114167.02949802.111079.04393527.0974873.05232209.0960413.06679051.0903567.08010726.0965586.11180017.0716634.11124451.0310174.06096295.0337679.08144877.0240408.07565741.0289379.14789747.0069072.1180955v6c0 .55228475-.4477153 1-1 1s-1-.44771525-1-1v-3.586l-6.2928932 6.2931068c-.360484.3604839-.927715.3882135-1.3200062.0831886l-.0942074-.0831886c-.3604839-.360484-.3882135-.927715-.0831886-1.3200062l.0831886-.0942074 6.2911068-6.2928932h-3.584c-.5522847 0-1-.44771525-1-1s.4477153-1 1-1z" fill-rule="evenodd"/></svg></a> -->
       <a target="_blank" href="https://www.rvezy.com/rv-rental/alberta_edmonton_motorhome_truckcamper_toyota_rav4_beb694"><h1>Book your next adventure now</h1> <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path stroke="currentColor" fill="currentColor" d="m5 2h2c.55228475 0 1 .44771525 1 1 0 .51283584-.38604019.93550716-.88337887.99327227l-.11662113.00672773h-2c-.51283584 0-.93550716.38604019-.99327227.88337887l-.00672773.11662113v14c0 .5128358.38604019.9355072.88337887.9932723l.11662113.0067277h14c.5128358 0 .9355072-.3860402.9932723-.8833789l.0067277-.1166211v-2c0-.5522847.4477153-1 1-1 .5128358 0 .9355072.3860402.9932723.8833789l.0067277.1166211v2c0 1.5976809-1.24892 2.9036609-2.8237272 2.9949073l-.1762728.0050927h-14c-1.59768088 0-2.90366088-1.24892-2.99490731-2.8237272l-.00509269-.1762728v-14c0-1.59768088 1.24891996-2.90366088 2.82372721-2.99490731l.17627279-.00509269h2zm16 0 .081.003.1197258.01724007.1114167.02949802.111079.04393527.0974873.05232209.0960413.06679051.0903567.08010726.0965586.11180017.0716634.11124451.0310174.06096295.0337679.08144877.0240408.07565741.0289379.14789747.0069072.1180955v6c0 .55228475-.4477153 1-1 1s-1-.44771525-1-1v-3.586l-6.2928932 6.2931068c-.360484.3604839-.927715.3882135-1.3200062.0831886l-.0942074-.0831886c-.3604839-.360484-.3882135-.927715-.0831886-1.3200062l.0831886-.0942074 6.2911068-6.2928932h-3.584c-.5522847 0-1-.44771525-1-1s.4477153-1 1-1z" fill-rule="evenodd"/></svg></a>
       <h2 id="st">The brand new Toyota RAV4 2023 is fully equipped with a Thule Tepui Explorer Kukenam 3 person roof top tent. Explore the wilderness of Alberta & British Columbia in comfort with this stylish and fuel efficient Toyota RAV4 2023 and rooftop tent combo!</h2>
+    </div>
+    <div id="footer">
+      camponwheels.ca © 2024
     </div>
   </div>
 </body>
