remove galary item from menu

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <div id="menu">
       <ul>
         <li><a href="https://blog.camponwheels.ca" target="_blank">blog</a></li>
-        <li><a href="#">galary</a></li>
+        <!-- <li><a href="#">galary</a></li> -->
         <li><a href="https://blog.camponwheels.ca/tag/trip-suggestions/" target="_blank">trip suggestions</a></li>
         <li><a href="https://www.rvezy.com/rv-rental/alberta_edmonton_motorhome_truckcamper_toyota_rav4_beb694" target="_blank">book now</a></li>
       </ul>
